airsonic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airsonic
spec:
  selector:
    app: airsonic
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
