airsonic-nginx-ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-airsonic
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - airsonic-test.crabdance.com
    secretName: airsonic-tls-helm
  rules:
  - host: airsonic-test.crabdance.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
         service:
          name: airsonic-helm
          port:
           number: 4040
