airsonic-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-airsonic
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dracula.crabdance.com
    secretName: jenkins-tls
  rules:
  - host: dracula.crabdance.com
    http:
      paths:
      - path: /
        backend:
          serviceName: airsonic
          servicePort: 4040
